2008-10-30  Stefan Kost  <ensonic@users.sf.net>

	* docs/Makefile.am:
	* docs/gst/gstreamer-docs.sgml:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/running.xml:
	* docs/libs/gstreamer-libs-docs.sgml:
	  Change to xinclude based build - its faster and easier to maintain.

2008-10-30  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstregistrybinary.c:
	* gst/gstregistryxml.c:
	  Use g_unlink() as none of these are directories.

2008-10-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstpipeline.c: (gst_pipeline_provide_clock_func):
	Some more comments.

2008-10-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_find_transform), (gst_base_transform_getrange):
	If we have a fixate function, call it even if we already have fixed caps
	because the subclass might add some caps. Makes audioconvert add a
	default channel layout.

2008-10-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_prepare_output_buffer),
	(gst_base_transform_getrange):
	Clear the output buffer variable.
	Cleanups to the error path in the getrange function.
	Fixes #557649.

2008-10-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/elements/gstfdsrc.c: (gst_fd_src_create):
	* plugins/elements/gstfilesrc.c: (gst_file_src_create_read):
	Use gst_buffer_try_new_and_alloc() and handle errors instead of
	using gst_buffer_new_and_alloc() which aborts if the buffer couldn't
	be allocated.

2008-10-23  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstsegment.c: (gst_segment_set_newsegment_full):
	Set the last_stop to a more meaningful position when configuring the
	segment. ie. the start/stop of the segment or clipped against the
	updated segment boundaries.

	* tests/check/gst/gstsegment.c: (GST_START_TEST):
	Add some unit tests for the last_stop.

2008-10-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* libs/gst/base/gstbytereader.c: